Update in Dashboard and Menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,11 @@
         <activity
             android:name=".BudgetGridView"
             android:exported="true" />
+
+        <activity
+            android:name=".ReportActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
